# search-dash.py

./: LICENSE  README.md  copilot-instructions.md  dashsub.py  module.md  pyproject.toml  requirements.txt  search.py  searchdash.py  test_dashsub.py  test_search.py  test_searchdash.py
.github/workflows/: ci.yml
